# c-bootcamp

day0/ex00/: Makefile
day0/ex01/: CMakeLists.txt  Contact.class.hpp  Makefile  main.cpp  phonebook
day0/ex02/: Account.class.cpp  CMakeLists.txt
day01/ex00/: Pony.cpp  Pony.hpp  main.cpp
day01/ex01/: ex01.cpp
day01/ex02/: Makefile  Zombie.cpp  Zombie.hpp  ZombieEvent.cpp  ZombieEvent.hpp  main.cpp
day01/ex03/: Zombie.cpp  Zombie.hpp  ZombieHorde.cpp  ZombieHorde.hpp  main.cpp
day01/ex04/: ex04.cpp
day01/ex05/: Brain.cpp  Brain.hpp  CMakeLists.txt  Human.cpp  Human.hpp  main.cpp
day01/ex06/: CMakeLists.txt  HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Weapon.cpp  Weapon.hpp  a.out  main.cpp
day01/ex07/: CMakeLists.txt  Makefile  main.cpp  replace  test.txt
day01/ex08/: Human.cpp  Human.hpp  main.cpp
day02/ex00/: CMakeLists.txt  Fixed.cpp  Fixed.hpp  main.cpp
day02/ex01/: Fixed.cpp  Fixed.hpp  main.cpp
day02/ex02/: Fixed.cpp  Fixed.hpp  main.cpp
day03/: CMakeLists.txt
day03/ex00/: FragTrap.cpp  FragTrap.hpp  main.cpp
day03/ex01/: ScavTrap.cpp  ScavTrap.hpp  main.cpp
day03/ex02/: ClapTrap.cpp  FragTrap.cpp  FragTrap.hpp  ScavTrap.cpp  main.cpp
day03/ex03/: ClapTrap.cpp  FragTrap.hpp  NinjaTrap.hpp  main.cpp
day03/ex04/: ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  NinjaTrap.cpp  NinjaTrap.hpp  ScavTrap.hpp  SuperTrap.cpp  SuperTrap.hpp  a.out  main.cpp
day04/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  CMakeLists.txt  Peon.cpp  Peon.hpp  Sorcerer.cpp  Sorcerer.hpp  (+3 more)
ex00/: megaphone.cpp
ex01/: Contact.class.cpp  Makefile  main.cpp
(+41 files in other folders)
